chore(docs): fix StackBlitz link color on Safari (#442)

--- a/apps/docs-app/src/components/StackblitzButton/styles.module.css
+++ b/apps/docs-app/src/components/StackblitzButton/styles.module.css
@@ -6,6 +6,7 @@
 .stackblitzLink {
   display: flex;
   border: var(--ifm-global-border-width) solid var(--ifm-color-secondary);
+  color: var(--ifm-color-secondary);
 }
 
 .stackblitzLink:hover {
